...
        android:dividerHeight="4dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birthdayView" />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Delete User"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="@id/bottomDivider"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/editBtn"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="Edit User"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="@id/bottomDivider"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
